Cross-link languagesby defining {{page.section}} and including Bootstrap’s .navbar-right styles in `main.css`.Per discussion in #1233.

--- a/es/quickstart/quickstart.html
+++ b/es/quickstart/quickstart.html
@@ -4,6 +4,8 @@ layout: default
 meta_title: Ghost Quickstart
 heading: Ghost Quickstart
 subheading: Get up and running with Ghost.
+chapter: quickstart
+section: quickstart
 ---
 
 <div class="container">
