--- a/es/themes/index.html
+++ b/es/themes/index.html
@@ -4,6 +4,7 @@ layout: default
 meta_title: Theming Ghost
 heading: Ghost Themes
 subheading: Get started creating your own themes for Ghost
+chapter: themes
 ---
 
 <div class="container">
