--- a/es/usage/configuration.html
+++ b/es/usage/configuration.html
@@ -7,6 +7,7 @@ heading: Using Ghost
 subheading: Finding your way around, and getting set up the way you want
 chapter: usage
 permalink: /es/usage/configuration/
+section: configuration
 prev_section: usage
 next_section: settings
 ---
