--- a/es/usage/faq.html
+++ b/es/usage/faq.html
@@ -7,6 +7,7 @@ heading: Using Ghost
 subheading: Finding your way around, and getting set up the way you want
 chapter: usage
 permalink: /es/usage/faq/
+section: faq
 prev_section: writing
 ---
 
