--- a/es/usage/writing.html
+++ b/es/usage/writing.html
@@ -6,6 +6,7 @@ meta_description: An in depth guide to using the Ghost blogging platform. Got Gh
 heading: Using Ghost
 subheading: Finding your way around, and getting set up the way you want
 chapter: usage
+section: writing
 permalink: /es/usage/writing/
 prev_section: managing
 next_section: faq
