--- a/mail/index.html
+++ b/mail/index.html
@@ -3,6 +3,7 @@ layout: default
 meta_title: Ghost Mail Configuration - Ghost Docs
 meta_description: How to configure your email server and send emails with the Ghost blogging platform. Everything you need to know.
 heading: Setting up Email
+chapter: mail
 ---
 
 <div class="container">
