--- a/zh/installation/deploy.html
+++ b/zh/installation/deploy.html
@@ -7,6 +7,7 @@ heading: Installing Ghost &amp; Getting Started
 subheading: The first steps to setting up your new blog for the first time.
 permalink: /zh/installation/deploy/
 chapter: installation
+section: deploy
 prev_section: linux
 next_section: upgrading
 ---
