--- a/zh/installation/troubleshooting.html
+++ b/zh/installation/troubleshooting.html
@@ -7,6 +7,7 @@ heading: Installing Ghost &amp; Getting Started
 subheading: The first steps to setting up your new blog for the first time.
 permalink: /zh/installation/troubleshooting/
 chapter: installation
+section: troubleshooting
 prev_section: upgrading
 ---
 
