--- a/zh/quickstart/quickstart.html
+++ b/zh/quickstart/quickstart.html
@@ -4,6 +4,8 @@ layout: default
 meta_title: Ghost Quickstart
 heading: Ghost Quickstart
 subheading: Get up and running with Ghost.
+chapter: quickstart
+section: quickstart
 ---
 
 <div class="container">
