Correct Chinese language code, cross-link language versions
As discussed in #1233 and #1344
- added {{page.section}} metadata so as to be able to reference URI components (site_url, page.lang, page.chapter, page.section) individually
- refactored canonical meta tag in default layout to refer to the same page with trailing slash: site_url/[page.lang/][page.chapter/][page.section/]
- added alternate-hreflang meta tags in default layout to help search engines understand about different language versions
- added visible cross-language links in top navbar with .navbar-right styling for each page, using the URI components mentioned above to construct the different language links (essentially but not quite the same logic as for alternate-hreflang meta tags)
- included Bootstrap v3's .navbar-right styles in main.css, seeing as they seem to be missing from bootstrap.css at the moment and I don't want to mess with it. :D

It may be appropriate to edit README.md or add a CONTRIBUTING or TRANSLATING file to explain how to get started with new translations, and/or move translations to a more formal mechanism...

--- a/zh/installation/upgrading.html
+++ b/zh/installation/upgrading.html
@@ -1,12 +1,13 @@
 ---
-lang: cn
+lang: zh
 layout: default
 meta_title: How to Install Ghost on Your Server - Ghost Docs
 meta_description: Everything you need to get the Ghost blogging platform up and running on your local or remote environement.
 heading: Installing Ghost &amp; Getting Started
 subheading: The first steps to setting up your new blog for the first time.
-permalink: /cn/installation/upgrading/
+permalink: /zh/installation/upgrading/
 chapter: installation
+section: upgrading
 prev_section: deploy
 next_section: troubleshooting
 ---
