--- a/zh/quickstart/quickstart.html
+++ b/zh/quickstart/quickstart.html
@@ -1,9 +1,11 @@
 ---
-lang: cn
+lang: zh
 layout: default
 meta_title: Ghost Quickstart
 heading: Ghost Quickstart
 subheading: Get up and running with Ghost.
+chapter: quickstart
+section: quickstart
 ---
 
 <div class="container">
