--- a/zh/themes/index.html
+++ b/zh/themes/index.html
@@ -1,10 +1,11 @@
 ---
-lang: cn
+lang: zh
 layout: default
 meta_title: How to Make Ghost Themes - Ghost Docs
 meta_description: An in depth guide to making themes for the Ghost blogging platform. Everything you need to know to build themes for Ghost.
 heading: Ghost Themes
 subheading: Get started creating your own themes for Ghost
+chapter: themes
 ---
 
 <div class="container">
