--- a/zh/usage/configuration.html
+++ b/zh/usage/configuration.html
@@ -1,12 +1,13 @@
 ---
-lang: cn
+lang: zh
 layout: default
 meta_title: How to Use Ghost - Ghost Docs
 meta_description: An in depth guide to using the Ghost blogging platform. Got Ghost but not sure how to get going? Start here!
 heading: Using Ghost
 subheading: Finding your way around, and getting set up the way you want
 chapter: usage
-permalink: /cn/usage/configuration/
+section: configuration
+permalink: /zh/usage/configuration/
 prev_section: usage
 next_section: settings
 ---
