--- a/br/usage/faq.html
+++ b/br/usage/faq.html
@@ -6,7 +6,7 @@ meta_description: An in depth guide to using the Ghost blogging platform. Got Gh
 heading: Using Ghost
 subheading: Finding your way around, and getting set up the way you want
 chapter: usage
-permalink: /es/usage/faq/
+permalink: /br/usage/faq/
 prev_section: writing
 ---
 
