--- a/br/usage/managing.html
+++ b/br/usage/managing.html
@@ -6,7 +6,7 @@ meta_description: An in depth guide to using the Ghost blogging platform. Got Gh
 heading: Using Ghost
 subheading: Finding your way around, and getting set up the way you want
 chapter: usage
-permalink: /es/usage/managing/
+permalink: /br/usage/managing/
 prev_section: settings
 next_section: writing
 ---
