--- a/pt-BR/installation/windows.html
+++ b/pt-BR/installation/windows.html
@@ -1,10 +1,10 @@
 ---
 lang: pt-BR
 layout: default
-meta_title: How to Install Ghost on Your Server - Ghost Docs
-meta_description: Everything you need to get the Ghost blogging platform up and running on your local or remote environement.
-heading: Installing Ghost &amp; Getting Started
-subheading: The first steps to setting up your new blog for the first time.
+meta_title: Como instalar o Ghost no seu Servidor - Ghost Docs
+meta_description: Tudo o que você precisa saber para colocar sua plataforma Ghost funcionando no seu ambiente local, ou em um ambiente remoto.
+heading: Instalando o Ghost &amp; Começando
+subheading: Os primeiros passos para configurar o seu Blog pela primeira vez.
 permalink: /pt-BR/installation/windows/
 chapter: installation
 prev_section: mac
@@ -17,14 +17,14 @@ next_section: linux
 
         <section id="content" class="col-lg-9">
 
-            <h1 id="install-windows">Installing on Windows</h1>
+            <h1 id="install-windows">Instalando no Windows</h1>
 
-            <h3>Install Node</h3>
+            <h3>Instalando o Node.js</h3>
 
             <ul>
-                <li>On <a href="http://nodejs.org">http://nodejs.org</a> press install, an '.msi' file will be downloaded</li>
-                <li>Click on the download to open the installer, this is going to install both Node and npm.</li>
-                <li>Click through the installer, until you get to the screen telling you Node.js is installed.</li>
+                <li>Abra <a href="http://nodejs.org">http://nodejs.org</a> clique "install", irá iniciar o download de um arquivo '.msi'</li>
+                <li>Abra o instalador. Ele irá instalar o Node.js e o npm</li>
+                <li>Avance na instalação, até ser informado que o Node.js já está instalado.</li>
             </ul>
 
             <p>If you get stuck you can watch the whole <a href="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/install-node-win.gif" title="Install node on Windows">process in action here</a>.</p>
@@ -38,18 +38,18 @@ next_section: linux
                 <li>When the folder opens, right click on the downloaded zip file and choose 'Extract all'.</li>
             </ul>
 
-            <p>If you get stuck you can watch the whole <a href="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/install-ghost-win.gif" title="Install Ghost on Windows Part 1">process in action here</a>.</p>
+            <p>Se você ficar perdido, você pode assistir <a href="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/install-ghost-win.gif" title="Install Ghost on Windows Part 1">o processo aqui</a>.</p>
 
-            <h3>Install and Run Ghost</h3>
+            <h3>Instalando e Rodando o Ghost</h3>
 
             <ul>
-                <li>In your start menu, find 'Node.js' and then choose 'Node.js Command Prompt'</li>
-                <li>In the Node command prompt, you need to change directory to where you extracted Ghost. Type: <code>cd Downloads/ghost-#.#.#</code> (replace hashes with the version of Ghost you downloaded).</li>
-                <li>Next, in the command prompt type <code>npm install --production</code> <span class="note">note the two dashes</span></li>
-                <li>When npm is finished installing, type <code>npm start</code> to start Ghost in development mode</li>
-                <li>In a browser, navigate to <code class="path">127.0.0.1:2368</code> to see your newly setup Ghost blog</li>
-                <li>Change the url to <code class="path">127.0.0.1:2368/ghost</code> and create your admin user to login to the Ghost admin.</li>
-                <li>See the <a href="/usage">usage docs</a> for instructions on the next steps</li>
+                <li>No menu iniciar, ache 'Node.js' e abra o 'Node.js Command Prompt'</li>
+                <li>Na linha de comando do Node, você precisará navegar para o diretório que você extraiu o Ghost. Escreva: <code>cd Downloads/ghost-#.#.#</code> (Substitua as tralhas com a versão que você fez download).</li>
+                <li>Na nova janela do terminal, escreva <code>npm install --production</code> <span class="note">Não esqueça os dois traços</span></li>
+                <li>Quando o npm terminal a instalação, escreva <code>npm start</code> para iniciar o Ghost em modo de desenvolvimento</li>
+                <li>No seu navegador, navegue para <code class="path">127.0.0.1:2368</code> para acessar o seu Ghost Blog</li>
+                <li>Altere a url para <code class="path">127.0.0.1:2368/ghost</code> e crie seu usuário administrador para se autenticar com seu Ghost.</li>
+                <li>Veja o <a href="/usage">manual de uso</a> para maiores instruções sobre os próximos passos</li>
             </ul>
 
             <img width="100%" src="https://s3-eu-west-1.amazonaws.com/ghost-website-cdn/install-ghost-win-2.gif" title="Install Ghost on Windows - Part 2" />
