--- a/pt-BR/installation/deploy.html
+++ b/pt-BR/installation/deploy.html
@@ -1,10 +1,10 @@
 ---
 lang: pt-BR
 layout: default
-meta_title: How to Install Ghost on Your Server - Ghost Docs
-meta_description: Everything you need to get the Ghost blogging platform up and running on your local or remote environement.
-heading: Installing Ghost &amp; Getting Started
-subheading: The first steps to setting up your new blog for the first time.
+meta_title: Como instalar o Ghost no seu Servidor - Ghost Docs
+meta_description: Tudo o que você precisa saber para colocar sua plataforma Ghost funcionando no seu ambiente local, ou em um ambiente remoto.
+heading: Instalando o Ghost &amp; Começando
+subheading: Os primeiros passos para configurar o seu Blog pela primeira vez.
 permalink: /pt-BR/installation/deploy/
 chapter: installation
 prev_section: linux
@@ -17,68 +17,68 @@ next_section: upgrading
 
         <section id="content" class="col-lg-9">
 
-            <h2 id="deploy">Getting Ghost Live</h2>
+            <h2 id="deploy">Colocando o Ghost no Ar</h2>
 
-            <p>So you're ready to get Ghost live? Excellent!</p>
+            <p>Então você está pronto para colocar o Ghost no ar? Excelente!</p>
 
-            <p>The first decision you need to make, is whether you want to install and setup Ghost yourself, or whether you prefer to use an installer.</p>
+            <p>A primeira decisão que você precisa fazer, é se você quer instalar e configurar o Ghost você mesmo, ou se prefere usar algum instalador.</p>
 
-            <h3>Installers</h3>
+            <h3>Instaladores</h3>
 
-            <p>There are a couple of options for simple installers at the moment:
+            <p>Existem alguns opções de instaladores simples no momento:
                 <ul>
-                    <li>Deploy to the cloud with <a href="http://wiki.bitnami.com/Applications/BitNami_Ghost">Bitnami</a>.</li>
-                    <li>Launch Ghost with <a href="http://developer.rackspace.com/blog/launch-ghost-with-rackspace-deployments.html">Rackspace deployments</a>.</li>
-                    <li>Get up and running with a <a href="https://www.digitalocean.com/community/articles/how-to-use-the-digitalocean-ghost-application">DigitalOcean Droplet</a>.</li>
+                    <li>Publicar na nuvem com <a href="http://wiki.bitnami.com/Applications/BitNami_Ghost">Bitnami</a>.</li>
+                    <li>Lançar o Ghost com <a href="http://developer.rackspace.com/blog/launch-ghost-with-rackspace-deployments.html">Rackspace deployments</a>.</li>
+                    <li>Colocar no ar e rodando usando um <a href="https://www.digitalocean.com/community/articles/how-to-use-the-digitalocean-ghost-application">DigitalOcean Droplet</a>.</li>
                 </ul>
             </p>
 
-            <h3>Manual Setup</h3>
+            <h3>Configuração Manual</h3>
 
-            <p>You're going to need a hosting package that already has, or will allow you to install <a href="http://nodejs.org">Node.js</a>.
-                This means something like a cloud (<a href="http://aws.amazon.com/ec2/">Amazon EC2</a>, <a href="http://www.digitalocean.com">DigitalOcean</a>, <a href="http://www.rackspace.com/cloud/">Rackspace Cloud</a>), VPS (<a href="https://www.webfaction.com/">Webfaction</a>, <a href="http://www.dreamhost.com/servers/vps/">Dreamhost</a>) or other package that has SSH (terminal) access & will allow you to install Node.js. There are plenty around and they can be very cheap.</p>
+            <p>Você irá precisar de um servidor que já tenha, ou lhe permita instalar o <a href="http://nodejs.org">Node.js</a>.
+                Isso significa algo como o (<a href="http://aws.amazon.com/ec2/">Amazon EC2</a>, <a href="http://www.digitalocean.com">DigitalOcean</a>, <a href="http://www.rackspace.com/cloud/">Rackspace Cloud</a>), VPS (<a href="https://www.webfaction.com/">Webfaction</a>, <a href="http://www.dreamhost.com/servers/vps/">Dreamhost</a>) ou outro que lhe conceda acesso SSH (terminal) & que permita instalar o Node.js. Existem vários servidores do tipo, e eles podem ser bem baratos.</p>
 
-            <p>What won't work at the moment, is cPanel-style shared hosting as this is usually aimed specifically at hosting PHP. Although some offer Ruby, and so may offer Node.js in the future as they are somewhat similar.
+            <p>O que não irá funcionar no momento é uma hospedagem compartilhada (como aquelas que usam o cPanel), esse tipo de hospedagem normalmente é destinado a aplicativos que rodam algo como o PHP. Alguns já oferecem suporte ao Ruby, e talvez um dia irão oferecer suporte ao Node.js ou algo similar.
 
-            <p>Unfortunately, many of the Node-specific cloud hosting solutions such as <strong>Nodejitsu</strong> & <strong>Heroku</strong> are <strong>NOT</strong> compatible with Ghost. They will work at first, but they will delete your files and therefore all image uploads and your database will disappear. Heroku supports MySQL so you could use this, but you will still lose any uploaded images.</p>
+            <p>Infelizmente alguns servidores cloud específicos para utilizar o Node.js como o <strong>Nodejitsu</strong> & <strong>Heroku</strong> <strong>NÃO</strong> são compatíveis com o Ghost. Eles irão funcionar no início, mas irão deletar seus arquivos, imagens e seu banco de dados irá desaparecer. O Heroku suporta MySQL e você pode usa-lo, porém você ainda assim irá perder suas imagens enviadas.</p>
 
-            <p>The following links contain instructions on how to get up and running with:
+            <p>Os links a seguir contém instruções de como configurar e rodar com:
                 <ul>
-                    <li><a href="http://www.howtoinstallghost.com/how-to-install-ghost-on-dreamhost/">Dreamhost</a> - from <a href="http://howtoinstallghost.com">howtoinstallghost.com</a></li>
-                    <li><a href="http://ghosted.co/install-ghost-digitalocean/">DigitalOcean</a> - from <a href="http://ghosted.co">Corbett Barr</a></li>
-                    <li><a href="http://www.howtoinstallghost.com/how-to-install-ghost-on-webfaction-hosting/">Webfaction</a> - from <a href="http://howtoinstallghost.com">howtoinstallghost.com</a></li>
-                    <li><a href="http://ghost.pellegrom.me/installing-ghost-on-ubuntu/">Rackspace</a> (Ubuntu 13.04 + linux service) - from <a href="http://ghost.pellegrom.me/">Gilbert Pellegrom</a></li>
-                    <li><a href="http://0v.org/installing-ghost-on-ubuntu-nginx-and-mysql/">Ubuntu + nginx + forever</a> - from <a href="http://0v.org/">Gregg Housh</a></li>
-                    <li>...check the <a href="https://en.ghost.org/forum/installation">installation forum</a> for more guides ...</li>
+                    <li><a href="http://www.howtoinstallghost.com/how-to-install-ghost-on-dreamhost/">Dreamhost</a> - por <a href="http://howtoinstallghost.com">howtoinstallghost.com</a></li>
+                    <li><a href="http://ghosted.co/install-ghost-digitalocean/">DigitalOcean</a> - por <a href="http://ghosted.co">Corbett Barr</a></li>
+                    <li><a href="http://www.howtoinstallghost.com/how-to-install-ghost-on-webfaction-hosting/">Webfaction</a> - por <a href="http://howtoinstallghost.com">howtoinstallghost.com</a></li>
+                    <li><a href="http://ghost.pellegrom.me/installing-ghost-on-ubuntu/">Rackspace</a> (Ubuntu 13.04 + linux service) - por <a href="http://ghost.pellegrom.me/">Gilbert Pellegrom</a></li>
+                    <li><a href="http://0v.org/installing-ghost-on-ubuntu-nginx-and-mysql/">Ubuntu + nginx + forever</a> - por <a href="http://0v.org/">Gregg Housh</a></li>
+                    <li>...veja o <a href="https://en.ghost.org/forum/installation">forum de instalação</a> para mais guias...</li>
                 </ul>
             </p>
 
-            <h2>Making Ghost run forever</h2>
-            <p>The previously described method to start Ghost is <code>npm start</code>. This is a good way to do local develpment and tests, but if you start Ghost using the command line it will stop whenever you are closing the terminal window or log out from SSH. To prevent Ghost from stopping you have to run Ghost as a service. There are two ways to accomplish this.</p>
+            <h2>Fazendo o Ghost rodar ininterruptamente</h2>
+            <p>O método anterior descrito para iniciar o Ghost é usando o comando <code>npm start</code>. Essa é uma boa maneira para um ambiente local de desenvolvimento, mas se você usar a linha de comando para iniciar o Ghost, ele irá parar sempre que você fechar a janela do terminal ou sair do SSH. Para evitar que o Ghost pare, você tem que rodar ele como um serviço. Existem duas maneiras de fazer isso.</p>
 
             <h3>Forever (<a href="https://npmjs.org/package/forever">https://npmjs.org/package/forever</a>)</h3>
-            <p>You can use <code>forever</code> to run Ghost as a background task. <code>forever</code> will also take care of your Ghost installation and it will restart the node process if it crashes.</p>
+            <p>Você pode usar o <code>forever</code> para rodar o Ghost como uma tarefa em plano de fundo. O <code>forever</code> irá tomar conta para que sua instalação fique sempre no ar, reiniciando-a caso ele dê algum erro.</p>
 
             <ul>
                 <li>
-                    To install <code>forever</code> type <code>npm install forever -g</code>
+                    Para instalar o <code>forever</code> digite <code>npm install forever -g</code>
                 </li>
                 <li>
-                    To start Ghost using <code>forever</code> from the Ghost installation directory type <code>NODE_ENV=production forever start index.js</code>
+                    Para iniciar o Ghost usando o <code>forever</code>, do diretório da instalação do Ghost digite <code>NODE_ENV=production forever start index.js</code>
                 </li>
                 <li>
-                    To stop Ghost type <code>forever stop index.js</code>
+                    Para parar o processo do Ghost digite <code>forever stop index.js</code>
                 </li>
                 <li>
-                    To check if Ghost is currently running type <code>forever list</code>
+                    Para saber se o Ghost está rodando no momento use o comando <code>forever list</code>
                 </li>
             </ul>
 
             <h3>Supervisor (<a href="http://supervisord.org/">http://supervisord.org/</a>)</h3>
-            <p>Popular Linux distributions&mdash;such as Fedora, Debian, and Ubuntu&mdash;maintain a package for Supervisor: A process control system which allows you to run Ghost at startup without using init scripts. Unlike an init script, Supervisor is portable between Linux distributions and versions.</p>
+            <p>Distribuições Linux populares com o Fedora, Debian, and Ubuntu&mdash;possuem um pacote do Supervisor: Um sistema de controle de processos que o permite de rodar o Ghost ao iniciar a máquina, sem utilizar scripts do tipo <em>init</em>. Diferente de um script do tipo <em>init</em>, o Supervisor é compatível com várias distribuições linux e suas versões.</p>
             <ul>
                 <li>
-                    <a href="http://supervisord.org/installing.html">Install Supervisor</a> as required for your Linux distribution. Typically, this will be:
+                    <a href="http://supervisord.org/installing.html">Instale o Supervisor</a> como requerimento em sua distribuição Linux. Normalmente você irá usar esses comandos:
                     <ul>
                         <li>
                             Debian/Ubuntu: <code>apt-get install supervisor</code>
@@ -87,15 +87,15 @@ next_section: upgrading
                             Fedora: <code>yum install supervisor</code>
                         </li>
                         <li>
-                            Most other distributions: <code>easy_install supervisor</code>
+                            Maioria das outras distribuições: <code>easy_install supervisor</code>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    Ensure that Supervisor is running, by running <code>service supervisor start</code>
+                    Tenha certeza que o Supervisor está rodando, digitando <code>service supervisor start</code>
                 </li>
                 <li>
-                    Create the startup script for your Ghost installation. Typically this will go in <code>/etc/supervisor/conf.d/ghost.conf</code> For example:
+                    Crie um script para sua instalação do Ghost. Normalmente isso irá ser salvo em <code>/etc/supervisor/conf.d/ghost.conf</code> Por exemplo:
                     <p><pre>
 [program:ghost]
 command = node /path/to/ghost/index.js
@@ -109,23 +109,23 @@ environment = NODE_ENV="production"
                     </pre></p>
                 </li>
                 <li>
-                    Start Ghost using Supervisor: <code>supervisorctl start ghost</code>
+                    Iniciar o Ghost utilizando o Supervisor: <code>supervisorctl start ghost</code>
                 </li>
                 <li>
-                    To stop Ghost: <code>supervisorctl stop ghost</code>
+                    Para parar o Ghost: <code>supervisorctl stop ghost</code>
                 </li>
             </ul>
-            <p>You can see the <a href="http://supervisord.org">documentation for Supervisor</a> for more information.</p>
+            <p>Você pode ver a <a href="http://supervisord.org">documentação do Supervisor</a> para mais informações.</p>
 
 
 
 
             <h3>Init Script</h3>
-            <p>Linux systems use init scripts to run on system boot. These scripts exist in /etc/init.d. To make Ghost run forever and even survive a reboot you could set up an init script to accomplish that task. The following example will work on Ubuntu and was tested on <b>Ubuntu 12.04</b>.</p>
+            <p>Sistemas Linux utilizam scripts <em>init</em> para rodar um processo quando o sistema iniciar. Esses scripts ficam em /etc/init.d. Para fazer o Ghost rodar sempre, mesmo que a máquina seja reiniciada, você pode usar os scripts <em>init</em> para isso. O exemplo a seguir irá funcionar no Ubuntu e foi testado no <b>Ubuntu 12.04</b>.</p>
 
             <ul>
                 <li>
-                    Create the file /etc/init.d/ghost with the following content:
+                    Criar o arquivo /etc/init.d/ghost com o seguinte conteúdo:
                     <p><pre>
                         #! /bin/sh
 ### BEGIN INIT INFO
@@ -300,28 +300,28 @@ esac
                     </pre></p>
                 </li>
                 <li>
-                    Change the execution permission for the init script by typing
+                    Mude as permissões do arquivo utilizando o comando
                     <code>chmod 755 /etc/init.d/ghost</code>
                 </li>
                 <li>
-                    Use the script:
+                    Utilizando o script:
                     <ul>
-                        <li>start: <code>service ghost start</code></li>
-                        <li>stop: <code>service ghost stop</code></li>
-                        <li>restart: <code>service ghost restart</code></li>
-                        <li>status: <code>service ghost status</code></li>
+                        <li>Iniciar: <code>service ghost start</code></li>
+                        <li>Parar: <code>service ghost stop</code></li>
+                        <li>Reiniciar: <code>service ghost restart</code></li>
+                        <li>Estado Atual: <code>service ghost status</code></li>
                     </ul>
                 </li>
                 <li>
-                    To start Ghost on system start the newly created init script has to be registered for start up. Type the following two commands in command line: <code>update-rc.d ghost defaults</code> and <code>update-rc.d ghost enable</code>
+                    Para iniciar o Ghost junto com o sistema utilizando o script <em>init</em> que acabamos de criar, você precisa registra-lo no sistema. Para isso, utilize os seguintes comandos no terminal: <code>update-rc.d ghost defaults</code> e <code>update-rc.d ghost enable</code>
                 </li>
             </ul>
 
-            <p>Documentation on using node forever, and how to daemonize Ghost on ubuntu coming very soon!</p>
+            <p>Documentação sobre usar o <em>node forever</em> e como usar o Ghost como <em>daemon</em> no Ubuntu em breve!</p>
 
-            <h2>Setting up Ghost with a domain name</h2>
+            <h2>Configurando o Ghost com seu domínio</h2>
 
-            <p>Documentation on using nginx as a reverse proxy on their way.</p>
+            <p>Documentação utilizando nginx como proxy reverso a caminho.</p>
 
             {% if page.next_section || page.prev_section %}
                 {% include pagination.html %}
